Fixed a CI problem

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,4 +16,4 @@ jobs:
     - name: create bin directory
       run: mkdir bin
     - name: compile
-      run: gcc src/*.c -o bin/douzo
+      run: gcc src/*.c -o bin/douzo -lpthread
